<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OweTracker</string>
    <string name="add_friend_title">Add friend</string>
    <string name="about_title">About</string>
    <string name="splash_icon_desc">App Icon</string>
    <string name="oweboard_title">Owe-Board</string>
    <string name="label_owesactions_listview">friends with dues</string>
    <string name="strNoRecordsFound">No friend added\n\nAdd a friend\'s name to get started</string>
    <string name="strNoFriendSelected">No friend selected</string>
    <string name="strNoDueRecordsFound">No dues added</string>
    <string name="menu_item_reset_due">Reset dues</string>
    <string name="menu_item_delete_friend">Delete friend</string>
    <string name="menu_item_edit_friend">Edit Friend</string>
    <string name="menu_item_add_friend">Add friend</string>
    <string name="edit_due">Edit Due</string>
    <string name="toast_msg_add_friend_name">Please enter name</string>
    <string name="toast_msg_add_friend_currency">Please select a currency</string>
    <string name="toast_msg_some_error">Some error occurred</string>
    <string name="toast_msg_currency_changed">Display currency changed to</string>
    <string name="label_add_date">Date: Tap to select date</string>
    <string name="toast_msg_add_friend_success">Friend added auccesfully</string>
    <string name="toast_msg_add_friend_failure">Failed to add friend</string>
    <string name="toast_msg_friend_data_get_failure">Failed to get data for the friend</string>
    <string name="toast_msg_update_friend_success">Updated friend details</string>
    <string name="toast_msg_update_friend_failure">Could not update friend details</string>
    <string name="toast_msg_update_friend_negative">Friend with same name exists</string>
    <string name="label_hint_enter_amount">Enter amount</string>
    <string name="label_hint_enter_desc">Enter reason/description</string>
    <string name="alertdialog_friend_title">Friend exists</string>
    <string name="alertdialog_addfriend_message">A friend with same name exists. 
	    Do you want to save a new record?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="array_currency_item_select">No display currency selected</string>
    <string name="array_currency_item_dollar">$ (Dollar)</string>
    <string name="array_currency_item_rupee">\u20B9 (Indian Rupee)</string>
    <string name="array_currency_item_pound">£ (British Pound)</string>
    <string name="array_currency_item_euro">€ (Euro)</string>
    <string name="array_currency_item_yen">¥ (Yen)</string>
    <string name="array_givetake_item_select">Select who owes whom</string>
    <string name="array_givetake_item_gave">I owe/Friend gave</string>
    <string name="array_givetake_item_took">Friend owes/I gave</string>
    <string name="label_edit">Edit due</string>
    <string name="label_delete_friend">Delete friend</string>
    <string name="label_del">Delete due</string>
    <string name="toast_msg_add_due_amount">Please enter amount</string>
    <string name="toast_msg_add_due_date">Please enter date</string>
    <string name="toast_msg_add_due_givetake">Please select who owes whom</string>
    <string name="toast_msg_add_due_reason">Please enter description</string>
    <string name="label_enter_friend_name">Enter name of friend</string>
    <string name="toast_msg_due_add_success">Added due</string>
    <string name="toast_msg_due_add_failure">Unable to add due</string>
    <string name="toast_msg_due_update_success">Updated due</string>
    <string name="toast_msg_due_update_failure">Unable to update due</string>
    <string name="toast_msg_due_invalid_date ">Date cannot be further than today\'s date. </string>
    <string name="delete_due_alert_title">Confirm deleting due</string>
    <string name="delete_due_alert_msg">Are you sure you want to delete?</string>
    <string name="label_reset">Reset dues</string>
    <string name="label_sure">Are you sure?</string>
    <string name="add_due_dialog_title">Add due</string>
    <string name="edit_due_dialog_title">Edit due</string>
    <string name="edit_friend_dialog_title">Edit friend</string>
    <string name="label_date">Date:</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_settings">Settings</string>
    <string name="label_save">Save</string>
    <string name="toast_msg_reset">Dues reset</string>
    <string name="toast_msg_delete">Friend deleted</string>
    <string name="label_feedback">We\'d love to hear from you!</string>
    <string name="label_send_feedback">E-mail developers</string>
    <string name="feedback_hint">Speak your mind!</string>
    <string name="menu_item_add_new_due">Add new due</string>
    <string name="toast_msg_long_press">Long press dues to edit or delete</string>
    <string name="toast_msg_swipe">Swipe left/right to switch between tabs</string>
    <string name="owes_me">Owes you</string>
    <string name="i_owe">You owe</string>
    <string name="no_dues">Settled up</string>
    <string name="label_contact">Contact</string>
    <string name="no_dues_to_reset">No dues to reset</string>
    <string name="currency_dollar">$</string>
    <string name="currency_rupee">\u20B9</string>
    <string name="currency_pound">£</string>
    <string name="currency_euro">€</string>
    <string name="currency_yen">¥</string>
    <string name="array_givetake_item_select">Select who owes whom</string>
    <string name="array_givetake_item_gave">I owe/Friend gave</string>
    <string name="array_givetake_item_took">Friend owes/I gave</string>
    <string name="label_search">Search</string>
    <string name="strNoResults">No results</string>
    <string name="rate_app">Rate</string>
    <string name="share_intent_text"> Install OweTracker on your android phone or tab to track your 
	    dues in a simpler way!</string>
    <string name="share_intent_subj">Check out this app!</string>
    
    <string name="rate_dialog_title">Rate the app</string>
    <string name="rate_dialog_msg">Rate OweTracker in Google Play?</string>
    <string name="rate_dialog_now">Rate now</string>
    <string name="rate_dialog_never">Don\'t Remind Me</string>
    <string name="rate_dialog_later">Remind me later</string>
    <string name="total_records">Total records</string>
    <string name="last_update">Pending since</string>
    <string name="all_dues">All dues</string>
    <string name="you_owe">You owe</string>
    <string name="you_are_owed">You are owed</string>
    <string name="no_change_currency">No change in currency</string>
    <string name="total_you_owe">Total amount you owe</string>
    <string name="total_you_are_owed">Total amount you\'re owed</string>
    
    
    <string name="intro">OweTracker app is made for Android 
	    users who live among friends with whom they usually have dues with each other. 
	    This application will help them to keep a track of their dues with different friends, it helps you add friends and then add dues as you give/take and 
	    have easy access to the final amount you owe to each other.</string>
	        
    <string name="why_use_owetracker">Do you live in a shared apartment
	     or do you have lot of friends with whom you usually owe money or lend money to? Is it tough for
	      you to keep track of every single penny you need back? Do your friends usually remind you 
	      of money you owe them and you have no idea when did that happen?\n\nUse the OweTracker app to 
	      keep track of your dues in 3 simple steps\n\n1. Add friend\n2. Add dues of friend\n3. Keep track 
	      easily</string>
	      
    <string name="key_features">Key Features\n---------------------\n1. Simple interface to add/edit/delete dues\n2. 
	      Using 5
	       different currencies for display (Indian Rupee, Dollar, Pound, Euro and Yen) and more to come 
	       soon\n3.
	        One tap to clear your dues or delete the friend details\n4. Total due is auto-calculated 
	        every time you 
	        add/modify/delete a due</string>

</resources>
