<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listview_bg" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:id="@+id/intoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/about_bg"
            android:padding="15dp"
            android:text="@string/intro"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/whyUseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/about_bg"
            android:padding="15dp"
            android:text="@string/why_use_owetracker"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/keyFeaturesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/about_bg"
            android:padding="15dp"
            android:text="@string/key_features"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>