<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/aboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="@string/lorem_ipsium" />

        <View
            android:id="@+id/darkLine"
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:layout_below="@+id/aboutText"
            android:background="@android:color/darker_gray"/>
        
        <TextView
            android:id="@+id/textViewFeedbackTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/darkLine"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_feedback"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextFeedback"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RatingBar
            android:id="@+id/ratingBarApprate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rateTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:rating="3" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratingBarApprate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/label_send_feedback" />

        <EditText
            android:id="@+id/editTextFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewFeedbackTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/feedback_hint"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="5" >
        </EditText>
    </RelativeLayout>

</ScrollView>